styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");

.database-plugin__html {
  box-sizing: border-box;
}

.database-plugin,
.database-plugin:before,
.database-plugin:after {
  box-sizing: inherit;
  overflow-x: auto;
}

.database-plugin {
  margin: 0px;
  padding: 0px;
  font-family: "Inter", sans-serif;
}

.transition-fade-enter {
  opacity: 0;
}

.transition-fade-enter-active {
  opacity: 1;
  transition: opacity 300ms;
}

.transition-fade-exit {
  opacity: 1;
}

.transition-fade-exit-active {
  opacity: 0;
  transition: opacity 300ms;
}

.svg-icon svg {
  position: relative;
  display: block;
  height: 1.5em;
  width: 1.5em;
}

.svg-text svg {
  stroke: var(--text-faint);
}

.sort-button .svg-text svg {
  stroke: var(--text-muted);
}

.svg-180 svg {
  transform: rotate(180deg);
}

.form-input {
  padding: 0.375rem;
  background-color: var(--background-primary);
  border: none;
  border-radius: 4px;
  font-size: 0.875rem;
  color: var(--text-normal);
}

.form-input:focus {
  outline: none;
  box-shadow: 0 0 1px 2px var(--background-modifier-border);
}

.is-fullwidth {
  width: 100%;
}

.data-input {
  white-space: pre-wrap;
  border: none;
  padding: 0.5rem;
  color: var(--text-normal);
  font-size: 1rem;
  border-radius: 4px;
  resize: none;
  background-color: var(--background-primary);
  box-sizing: border-box;
  flex: 1 1 auto;
}

.data-input:hover {
  background-color: var(--background-secondary);
}

.data-input:focus {
  outline: none;
}

.svg-icon-sm svg {
  position: relative;
  height: 1.25em;
  width: 1.25em;
}

.svg-gray svg {
  stroke: var(--text-faint);
}

.option-input {
  width: 100%;
  font-size: 1rem;
  border: none;
  background-color: transparent;
}

.option-input:focus {
  outline: none;
}

.database-plugin__noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 2;
  overflow: hidden;
}

.sort-button {
  padding: 0.25rem 0.75rem;
  margin: 0;
  width: 100%;
  background-color: transparent;
  font-size: 0.875rem;
  color: var(--text-muted);
  cursor: pointer;
  text-align: left;
}

.database-plugin__tr:last-child .database-plugin__td {
  border-bottom: 0;
}

.database-plugin__add-row {
  color: var(--text-accent);
  padding: 0.5rem;
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  cursor: pointer;
}

.database-plugin__add-row:hover {
  background-color: var(--background-modifier-box-shadow);
  color: var(--text-accent-hover);
}

.database-plugin__add-row .database-plugin__td {
  border: none;
  background-color: transparent;
  color: var(--text-muted);
}

.database-plugin__th {
  color: var(--text-faint);
  font-weight: 500;
  font-size: 0.875rem;
  cursor: pointer;
  background-color: var(--background-primary);
}

.database-plugin__th:hover {
  background-color: var(--background-secondary);
  color: var(--text-normal);
}

.database-plugin__th-content {
  overflow-x: hidden;
  text-overflow: ellipsis;
  padding: 0.5rem;
  display: flex;
  align-items: center;
}

.database-plugin__td {
  overflow: hidden;
  color: var(--text-normal);
  background-color: var(--background-primary);
  align-items: stretch;
  justify-content: center;
  padding: 0;
  display: flex;
  padding: 0.5rem;
  flex-direction: column;
}

.database-plugin__td-content {
  display: block;
  align-items: center;
}

.database-plugin__table {
  border-spacing: 0;
  border-top: 1px solid var(--background-modifier-border);
  border-bottom: 1px solid var(--background-modifier-border);
  display: "flex";
}

.database-plugin__th:last-child {
  border-right: 0;
}

.database-plugin__td:last-child {
  border-right: 0;
}

.database-plugin__th,
.database-plugin__td {
  white-space: pre-wrap;
  margin: 0;
  border-bottom: 1px solid var(--background-modifier-border);
  border-right: 1px solid var(--background-modifier-border);
  position: relative;
}

.database-plugin__header-group,
.database-plugin__header {
  justify-content: space-between;
  background-color: var(--background-secondary);
}

.database-plugin__navbar {
  display: flex;
  flex: 1 0 auto;
}

.text-align-right {
  text-align: right;
}

.cell-padding {
  padding: 0.5rem;
}

.d-flex {
  display: flex;
}

.cursor-default {
  cursor: default;
}

.align-items-center {
  align-items: center;
}

.flex-wrap-wrap {
  flex-wrap: wrap;
}

.menu.database-plugin__popper {
  position: relative;
  padding: 0;
}

.cursor-pointer {
  cursor: pointer;
}

.icon-margin {
  margin-right: 4px;
}

.font-weight-600 {
  font-weight: 600;
}

.font-size-75 {
  font-size: 0.75rem;
}

.flex-1 {
  flex: 1;
}

/**
*  Database Styles
*/
.dbfolder-table-container tr input {
  background: var(--background-modifier-box-shadow);
}

.draggable {
  top: auto !important;
  left: auto !important;
}

/*
*  Settings styles
*/
.configuration-section-container-developer {
  background-color: var(--background-modifier-error)
}

